fixing serial braud rate

--- a/MultiWii_2_4/v0.3/MultiWii/Makefile
+++ b/MultiWii_2_4/v0.3/MultiWii/Makefile
@@ -2,5 +2,6 @@ ARCHITECTURE = avr
 BOARD_TAG    = mega
 BOARD_SUB    = atmega2560
 MONITOR_PORT = /dev/tty.usbserial-A8005MO9
+MONITOR_BAUDRATE = 115200
 ARDUINO_DIR  = ../../../arduino-1.6.5
 include ~/DroneTime/MultiWii_2_4/Arduino-Makefile/Arduino.mk
